update tws